--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(fmt CONFIG REQUIRED)
   # vcpkg toolchains. Our tool does not depend on LibEdit.
   set(CMAKE_DISABLE_FIND_PACKAGE_LibEdit ON)
 
-  # Centralized LLVM/Clang discovery (supports monolithic and component fallback)
+  # Centralized LLVM/Clang discovery (dynamic monoliths only)
   include(GentestLLVM)
   gentest_find_llvm_clang()
 
@@ -24,57 +24,29 @@ find_package(fmt CONFIG REQUIRED)
   target_compile_features(gentest_codegen PRIVATE cxx_std_23)
 
 if(DEFINED LLVM_INCLUDE_DIRS)
-    target_include_directories(gentest_codegen PRIVATE ${LLVM_INCLUDE_DIRS})
-endif()
-
-# Prefer explicit Clang include dirs if exported by the package
-if(DEFINED Clang_INCLUDE_DIRS)
-    target_include_directories(gentest_codegen PRIVATE ${Clang_INCLUDE_DIRS})
-endif()
-if(DEFINED CLANG_INCLUDE_DIRS)
-    target_include_directories(gentest_codegen PRIVATE ${CLANG_INCLUDE_DIRS})
-endif()
-
-# Also pull include dirs from exported imported targets, which is the
-# canonical source of usage requirements when packages omit variables.
-if(TARGET LLVM)
-    get_target_property(_gentest_llvm_includes LLVM INTERFACE_INCLUDE_DIRECTORIES)
-    if(_gentest_llvm_includes)
-        target_include_directories(gentest_codegen PRIVATE ${_gentest_llvm_includes})
-    endif()
-endif()
-if(TARGET LLVMSupport)
-    get_target_property(_gentest_llvmsupp_includes LLVMSupport INTERFACE_INCLUDE_DIRECTORIES)
-    if(_gentest_llvmsupp_includes)
-        target_include_directories(gentest_codegen PRIVATE ${_gentest_llvmsupp_includes})
-    endif()
+    # Ensure correct LLVM headers take precedence over any stray /usr/local/include
+    target_include_directories(gentest_codegen BEFORE PRIVATE ${LLVM_INCLUDE_DIRS})
 endif()
 
 if(TARGET clangTooling)
     get_target_property(_gentest_clang_includes clangTooling INTERFACE_INCLUDE_DIRECTORIES)
     if(_gentest_clang_includes)
-        target_include_directories(gentest_codegen PRIVATE ${_gentest_clang_includes})
-    endif()
-endif()
-if(TARGET clangAST)
-    get_target_property(_gentest_clangast_includes clangAST INTERFACE_INCLUDE_DIRECTORIES)
-    if(_gentest_clangast_includes)
-        target_include_directories(gentest_codegen PRIVATE ${_gentest_clangast_includes})
-    endif()
-endif()
-if(TARGET clangBasic)
-    get_target_property(_gentest_clangbasic_includes clangBasic INTERFACE_INCLUDE_DIRECTORIES)
-    if(_gentest_clangbasic_includes)
-        target_include_directories(gentest_codegen PRIVATE ${_gentest_clangbasic_includes})
-    endif()
-endif()
-if(TARGET clang-cpp)
-    get_target_property(_gentest_clangcpp_includes clang-cpp INTERFACE_INCLUDE_DIRECTORIES)
-    if(_gentest_clangcpp_includes)
-        target_include_directories(gentest_codegen PRIVATE ${_gentest_clangcpp_includes})
+        target_include_directories(gentest_codegen BEFORE PRIVATE ${_gentest_clang_includes})
     endif()
 endif()
 
+# If exported by discovery, add canonical Clang include roots explicitly
+if(DEFINED GENTEST_CLANG_INCLUDE_DIRS AND GENTEST_CLANG_INCLUDE_DIRS)
+    target_include_directories(gentest_codegen BEFORE PRIVATE ${GENTEST_CLANG_INCLUDE_DIRS})
+elseif(DEFINED Clang_DIR)
+    # Fallback: derive include root from Clang_DIR (…/lib/cmake/clang -> prefix/include)
+    get_filename_component(_gentest_clang_cmake_dir "${Clang_DIR}" ABSOLUTE)
+    get_filename_component(_gentest_clang_lib_dir   "${_gentest_clang_cmake_dir}/.." ABSOLUTE)
+    get_filename_component(_gentest_clang_root      "${_gentest_clang_lib_dir}/../.." ABSOLUTE)
+    if(EXISTS "${_gentest_clang_root}/include/clang/AST/AST.h")
+        target_include_directories(gentest_codegen BEFORE PRIVATE "${_gentest_clang_root}/include")
+    endif()
+endif()
 
   if(LLVM_ENABLE_RTTI)
       target_compile_definitions(gentest_codegen PRIVATE LLVM_ENABLE_RTTI)
@@ -83,47 +55,8 @@ endif()
   # Prefer header-only fmt to avoid system-shared libfmt dependencies
   target_link_libraries(gentest_codegen PRIVATE fmt::fmt-header-only)
 
-  # Link against LLVM/Clang
-  # - If dynamic monoliths are available and required, use clang-cpp + LLVM.
-  # - If GENTEST_LLVM_DYNAMIC_ONLY is OFF, fall back to granular component linking when needed.
-  set(_gentest_link_libs)
-  set(_gentest_using_monoliths OFF)
-  if(GENTEST_LLVM_DYNAMIC_ONLY)
-    if(TARGET clang-cpp AND TARGET LLVM)
-      set(_gentest_link_libs clang-cpp;LLVM)
-      set(_gentest_using_monoliths ON)
-    else()
-      message(FATAL_ERROR "GENTEST_LLVM_DYNAMIC_ONLY=ON but required monolithic targets are missing (clang-cpp and/or LLVM)")
-    endif()
-  else()
-    if(TARGET clang-cpp AND TARGET LLVM)
-      set(_gentest_link_libs clang-cpp;LLVM)
-      set(_gentest_using_monoliths ON)
-    else()
-      # Fallback to granular component libraries
-      set(_gentest_clang_libs
-          clangTooling
-          clangAST
-          clangASTMatchers
-          clangBasic
-          clangFrontend
-          clangLex
-          clangParse
-          clangSema)
-      if(COMMAND llvm_map_components_to_libnames)
-        llvm_map_components_to_libnames(_gentest_llvm_libs Support)
-      else()
-        # If the helper is not available, try the monolithic LLVM target
-        if(TARGET LLVM)
-          set(_gentest_llvm_libs LLVM)
-        endif()
-      endif()
-      set(_gentest_link_libs ${_gentest_clang_libs};${_gentest_llvm_libs})
-    endif()
-  endif()
-
-  # Avoid CMake inter-target dependency cycles; rely on transitive interfaces
-  target_link_libraries(gentest_codegen PRIVATE ${_gentest_link_libs})
+  # Link strictly against dynamic monoliths
+  target_link_libraries(gentest_codegen PRIVATE clang-cpp LLVM)
 
   # Provide generator with project version for --help output in generated code
   target_compile_definitions(gentest_codegen PRIVATE GENTEST_VERSION_STR="${PROJECT_VERSION}")
@@ -135,12 +68,6 @@ endif()
   endif()
 
   unset(_gentest_clang_includes)
-  unset(_gentest_clangast_includes)
-  unset(_gentest_clangbasic_includes)
-  unset(_gentest_clangcpp_includes)
-  unset(_gentest_llvmsupp_includes)
-  unset(_gentest_llvm_includes)
-  unset(_gentest_clang_libs)
-  unset(_gentest_llvm_libs)
-  unset(_gentest_link_libs)
-  unset(_gentest_using_monoliths)
+  unset(_gentest_clang_cmake_dir)
+  unset(_gentest_clang_lib_dir)
+  unset(_gentest_clang_root)
