cmake(tools): fallback to Clang component linking when monolith not usable
- If 'clang-cpp' and 'LLVM' targets are not both present, link against components
  (clangTooling, clangASTMatchers, clangAST, clangFrontend, clangSerialization, clangBasic, LLVMSupport when available)
- Keep detailed status logs for link choice

Refs: PR #1

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -79,9 +79,40 @@ endif()
   # Prefer header-only fmt to avoid system-shared libfmt dependencies
   target_link_libraries(gentest_codegen PRIVATE fmt::fmt-header-only)
 
-  # Link strictly against dynamic monoliths
-  target_link_libraries(gentest_codegen PRIVATE clang-cpp LLVM)
-  message(STATUS "gentest[tools]: linking gentest_codegen against 'clang-cpp' and 'LLVM' (monoliths)")
+  # Link against monoliths when available, otherwise fall back to components
+  if(TARGET clang-cpp AND TARGET LLVM)
+    target_link_libraries(gentest_codegen PRIVATE clang-cpp LLVM)
+    message(STATUS "gentest[tools]: linking gentest_codegen against 'clang-cpp' and 'LLVM' (monoliths)")
+  else()
+    set(_gentest_clang_components "")
+    if(TARGET clangTooling)
+      list(APPEND _gentest_clang_components clangTooling)
+    endif()
+    if(TARGET clangASTMatchers)
+      list(APPEND _gentest_clang_components clangASTMatchers)
+    endif()
+    if(TARGET clangAST)
+      list(APPEND _gentest_clang_components clangAST)
+    endif()
+    if(TARGET clangFrontend)
+      list(APPEND _gentest_clang_components clangFrontend)
+    endif()
+    if(TARGET clangSerialization)
+      list(APPEND _gentest_clang_components clangSerialization)
+    endif()
+    if(TARGET clangBasic)
+      list(APPEND _gentest_clang_components clangBasic)
+    endif()
+    if(TARGET LLVMSupport)
+      list(APPEND _gentest_clang_components LLVMSupport)
+    endif()
+    if(NOT _gentest_clang_components)
+      message(FATAL_ERROR "gentest[tools]: neither monolithic targets (clang-cpp, LLVM) nor component targets available; cannot link gentest_codegen")
+    endif()
+    target_link_libraries(gentest_codegen PRIVATE ${_gentest_clang_components})
+    message(STATUS "gentest[tools]: linking gentest_codegen against components -> '${_gentest_clang_components}'")
+    unset(_gentest_clang_components)
+  endif()
 
   # Provide generator with project version for --help output in generated code
   target_compile_definitions(gentest_codegen PRIVATE GENTEST_VERSION_STR="${PROJECT_VERSION}")
