cmake(tools): add verbose DEBUG logs for clang-cpp/clangTooling target properties; confirm clang-cpp-only linking

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -13,6 +13,22 @@ find_package(fmt CONFIG REQUIRED)
   message(STATUS "gentest[tools]: GENTEST_CLANG_INCLUDE_DIRS='${GENTEST_CLANG_INCLUDE_DIRS}'")
   if(TARGET clang-cpp)
     message(STATUS "gentest[tools]: target 'clang-cpp' is available")
+    # Extra diagnostics to understand exported properties on CI providers
+    get_target_property(_gentest_clang_cpp_type     clang-cpp TYPE)
+    get_target_property(_gentest_clang_cpp_imported clang-cpp IMPORTED)
+    get_target_property(_gentest_clang_cpp_incs     clang-cpp INTERFACE_INCLUDE_DIRECTORIES)
+    get_target_property(_gentest_clang_cpp_iflibs   clang-cpp INTERFACE_LINK_LIBRARIES)
+    message(STATUS "gentest[tools]: clang-cpp TYPE='${_gentest_clang_cpp_type}', IMPORTED='${_gentest_clang_cpp_imported}'")
+    if(_gentest_clang_cpp_incs)
+      message(STATUS "gentest[tools]: clang-cpp INTERFACE include dirs -> '${_gentest_clang_cpp_incs}'")
+    else()
+      message(STATUS "gentest[tools]: clang-cpp has no INTERFACE include dirs")
+    endif()
+    if(_gentest_clang_cpp_iflibs)
+      message(STATUS "gentest[tools]: clang-cpp INTERFACE link libs -> '${_gentest_clang_cpp_iflibs}'")
+    else()
+      message(STATUS "gentest[tools]: clang-cpp has no INTERFACE link libs")
+    endif()
   else()
     message(STATUS "gentest[tools]: target 'clang-cpp' is NOT available")
   endif()
@@ -45,11 +61,15 @@ endif()
 
 if(TARGET clangTooling)
     get_target_property(_gentest_clang_includes clangTooling INTERFACE_INCLUDE_DIRECTORIES)
+    get_target_property(_gentest_clang_iflibs   clangTooling INTERFACE_LINK_LIBRARIES)
     if(_gentest_clang_includes)
         target_include_directories(gentest_codegen BEFORE PRIVATE ${_gentest_clang_includes})
         message(STATUS "gentest[tools]: added clangTooling INTERFACE include dirs -> '${_gentest_clang_includes}'")
     else()
         message(STATUS "gentest[tools]: clangTooling target has no INTERFACE include dirs")
+    endif()
+    if(_gentest_clang_iflibs)
+        message(STATUS "gentest[tools]: clangTooling INTERFACE link libs -> '${_gentest_clang_iflibs}'")
     endif()
 else()
     message(STATUS "gentest[tools]: target 'clangTooling' is not available; skipping INTERFACE include discovery")
