cmake/tools: propagate LLVM vars to caller; expand libLLVM candidates
- GentestLLVM.cmake: export LLVM_VERSION, LLVM_PACKAGE_VERSION, LLVM_INSTALL_PREFIX, LLVM_INCLUDE_DIRS, and CLANG/LLVM dylib toggles to parent scope
- tools/CMakeLists.txt: add libLLVM-${major}.so.1 to candidates; rely on version vars now visible

This should stop the spurious -lLLVM fallback and pick the correct absolute DSO on LLVM 19/20 action.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -170,6 +170,7 @@ endif()
             list(APPEND _cand_paths
               "${_libdir}/libLLVM-${_gentest_llvm_major}.so"
               "${_libdir}/libLLVM.so.${_gentest_llvm_major}"
+              "${_libdir}/libLLVM-${_gentest_llvm_major}.so.1"
             )
           endif()
         endif()
