--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        llvm: [18, 19, 20]
+        llvm: [18, 19, 20, 21]
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -23,9 +23,17 @@ jobs:
           cmake-version: '3.31.x'
 
       - name: Setup LLVM (${{ matrix.llvm }})
+        id: setup-llvm
         uses: KyleMayes/install-llvm-action@v2
         with:
           version: ${{ matrix.llvm }}
+
+      - name: Configure LLVM environment
+        shell: pwsh
+        run: |
+          $prefix = "${{ steps.setup-llvm.outputs.llvm-path }}"
+          "LLVM_PATH=$prefix" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          "PATH=$prefix\bin;$env:PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Install Ninja (Chocolatey)
         shell: powershell
